[project]
name = "quantum-interpreter"
version = "0.1.0"
description = "Python implementation of Robert Smith's Quantum Interpreter tutorial."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "numpy>=2.5.1",
]

[dependency-groups]
dev = [
    "ipykernel>=7.3.0",
    "pytest>=9.1.1",
]
